# PythonCodeBytes

./: application.db
Algo/: selectionSort.py
Composition/: composition.py  inheritance.py  regular.py
Flask-RESTX/: app.py  order.yaml
adapter/: adapter_pattern.py
adapter/before/: experiment.py
adapter/partial-adapter/: xml_adapter.py
async/: asyncio.py  asynciocpu.py  multiprocess.py  multithread.py  timeit.py  withoutasync.py
automation/: mobile.py
automation/mail.py/: mail.py
cli/: googlecli.py
contextmanager/: contextmgr.py
datastructures/: TreeStructure.py  dfs.py  doublelinkedlist.py  graph  linkedLIst.py  stack.py
datastructures/tests/: TestLinkedList.py
decorators/: authentication.py  measuretime.py
dictionary/: dictionary.py
django/myfirstprj/ErrorHandling/: customError.py  listerror.py
django/myfirstprj/myfirstprj/: asgi.py  settings.py  urls.py  views.py  wsgi.py
errorHandling/: customException.py  dcmnmCOnnectionError.py  errordecorator.py  weberror.py
flasgger/: app.py  swagger_config.yml
flask-cs50/: app.py
flask-cs50/templates/: index.html  layout.html
flask-swagger-ui/: app.py
flaskRestPlus/: app.py  pyproject.toml
functions/: simplFunction.py
json/: 217.json  districtregion.json  location.json  planogram.json  stna-storeinformation.json  stna0217.json
kafka/: kafkaConusmer.py
positiondelimited/: SrcFileData.py  TgtPayload.py  main.py  srcRow.py
positiondelimited/data/: PIKHDIWT.GOOD
pythonclass/: circle.py
trace/: trace.py
websockets/: wsserver.py
